# dev-setup

./: .ansible-lint  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSE.rst  README.md  SECURITY.md  ansible.cfg  default.macos.config.yml  galaxy.yml  inventory.example  mkdocs.yml  pyproject.toml  requirements.yml  tasks.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docs.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
docs/: index.md  usage.md
docs/configuration/: index.md  third_party_roles.md
docs/configuration/first_party_roles/: index.md  oh_my_zsh.md  pyenv.md
docs/features/: index.md
docs/features/linux/: index.md
docs/features/macos/: homebrew_cask.md  homebrew_packages.md  index.md  mas.md  other_tools.md  pipx.md
docs/material/overrides/hooks/: fix_markdown_links.py
material/overrides/hooks/: fix_markdown_links.py
meta/: runtime.yml
molecule/: prepare-docker-in-docker.yml
molecule/default/: converge.yml  molecule.yml
playbooks/: macos.yml  main.yml
roles/oh_my_zsh/: README.md
roles/oh_my_zsh/defaults/: main.yml
roles/oh_my_zsh/tasks/: macos.yml  main.yml
roles/oh_my_zsh/vars/: macos.yml
roles/pyenv/: README.md
roles/pyenv/defaults/: main.yml
roles/pyenv/tasks/: macos.yml  main.yml
roles/pyenv/templates/: .pyenvrc.j2
roles/pyenv/vars/: macos.yml  main.yml
