[tool.poetry]
name = "dev-setup"
version = "1.4.0"
description = "My own Ansible collection for development setup."
authors = ["Federico Jaureguialzo <fedejaure@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/fedejaure/dev-setup"
repository = "https://github.com/fedejaure/dev-setup"
package-mode = false

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fedejaure/dev-setup/issues"

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
ansible = "^12.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
invoke = "^2.2.1"
bump2version = "^1.0.1"

[tool.poetry.group.test.dependencies]
molecule = "^25.12.0"
molecule-plugins = {extras = ["docker"], version = "^25.8.12"}

[tool.poetry.group.lint.dependencies]
isort = "^7.0.0"
black = "^25.12.0"
ruff = "^0.14.9"
yamllint = "^1.37.1"
ansible-lint = {version = "^25.12.1", markers = "platform_system != 'Windows'"}

[tool.poetry.group.security.dependencies]
safety = "^3.7.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.19.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocs-minify-plugin = "^0.8.0"
termynal = "^0.13.1"

[tool.ruff]
target-version = "py310"
output-format = "full"
line-length = 99
fix = true
extend-exclude = [
    "material/*",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # flake8
  "C",  # mccabe
  "I",  # isort
  "N",  # pep8-naming
  "D",  # flake8-docstrings
  "ANN",  # flake8-annotations
  "S",  # flake8-bandit
  "BLE",  # flake8-blind-except
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "G",  # flake8-logging-format
  "ERA",  # eradicate
  "ISC",  # flake8-implicit-str-concat
  "RUF",  # Ruff-specific rules
]
ignore = ["ANN101", "D203", "D213"]
unfixable = [
  "ERA",  # Don't remove commented-out code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
".jupyter/jupyter_lab_config.py" = ["E501", "ERA001"]
"src/deeptune/utils.py" = ["ANN401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["invoke.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
